--- a/index.html
+++ b/index.html
@@ -89,8 +89,12 @@
 		</header>
 		<section class="hero">
 	<div class="text-container">
-		<h1 class="editable" data-cms-source="/index.html" data-cms-index="0">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable" data-cms-source="/index.html" data-cms-index="1">Track and optimize your sales team in real time.</p>
+		<h1 class="editable" data-cms-source="/index.html" data-cms-index="0">
+			Full Service Digital Marketing Agency
+		</h1>
+		<p class="subtext editable" data-cms-source="/index.html" data-cms-index="1">
+			We build fast, secure, optimized websites.
+		</p>
 		<div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div>
 		<div>
 			<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" data-cms-source="/index.html" data-cms-index="2" />
@@ -103,7 +107,7 @@
 		<div class="container flex">
 			<div class="text editable" data-cms-source="/index.html" data-cms-index="3">
 				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
 			</div>
 			<div class="image">
 				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" data-cms-source="/index.html" data-cms-index="4" />
@@ -140,15 +144,21 @@
 			<div class="testimonial-block">
 				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable" data-cms-source="/index.html" data-cms-index="9" /></div>
 				<blockquote>
-					<p class="editable" data-cms-source="/index.html" data-cms-index="10">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-					<p class="editable author" data-cms-source="/index.html" data-cms-index="11">Jim James - CEO of Global Corp.</p>
+					<p class="editable" data-cms-source="/index.html" data-cms-index="10">
+						Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.
+					</p>
+					<p class="editable author" data-cms-source="/index.html" data-cms-index="11">
+						Jim James - CEO of Global Corp.
+					</p>
 				</blockquote>
 			</div>
 		</div>
 	</section>
 
 	<section class="bottom-cta">
-		<h2 class="editable" data-cms-source="/index.html" data-cms-index="12"><strong>Improve</strong> your sales process today</h2>
+		<h2 class="editable" data-cms-source="/index.html" data-cms-index="12">
+			<strong>Improve</strong> your sales process today
+		</h2>
 		<div class="button alt"><a href="#">Get Started Free</a></div>
 	</section>
 </div>
