--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<p class="subtext editable" data-cms-source="/index.html" data-cms-index="1">
 			We build fast, secure, optimized websites.
 		</p>
-		<div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div>
+		<div class="cta button alt"><a href="/sign-up/">Get a Free Audit</a></div>
 		<div>
 			<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" data-cms-source="/index.html" data-cms-index="2" />
 		</div>
