--- a/about/index.html
+++ b/about/index.html
@@ -245,7 +245,7 @@
 					</ul>
 					
 				</div>
-				<p class="copyright">&copy; 2020 MyApp Ltd. • <a href="#">Terms</a> &amp; <a href="#">Privacy</a> • <a href="https://cloudcannon.com/">Template by CloudCannon</a></p>
+				<p class="copyright">&copy; 2020 MyApp Ltd. • <a href="#">Terms</a> &amp; <a href="#">Privacy</a> 
 			</div>
 		</footer>
 		<script>
