--- a/pricing/index.html
+++ b/pricing/index.html
@@ -298,7 +298,7 @@
 					</ul>
 					
 				</div>
-				<p class="copyright">&copy; 2020 MyApp Ltd. • <a href="#">Terms</a> &amp; <a href="#">Privacy</a> 
+				<p class="copyright">&copy; 2020 MyApp Ltd. • <a href="#">Terms</a> &amp; <a href="/terms">Privacy</a> 
 			</div>
 		</footer>
 		<script>
