Updated 3 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
 	<section>
 		<div class="container flex">
 			<div class="text editable" data-cms-source="/index.html" data-cms-index="3">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2><strong>SEO</strong>&nbsp;Services</h2>
+				<p>Developing an SEO strategy, Implementing the foundations of the plan, and focus on creating content that appeals to the target market.&nbsp;</p>
 			</div>
 			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" data-cms-source="/index.html" data-cms-index="4" />
+				<img alt="Screenshot" class="screenshot editable" src="/uploads/detroit-seo-agency-albatech.jpg" width="794" data-cms-source="/index.html" data-cms-index="4" />
 			</div>
 		</div>
 	</section>
