--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 	<section>
 		<div class="container flex">
 			<div class="text editable" data-cms-source="/index.html" data-cms-index="5">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>Custom&nbsp;<strong>Web Design</strong>&nbsp;and Development</h2>
+				<p>Unique web designs with strategic insights that generate more user engagement and higher conversions</p>
 			</div>
 			<div class="image">
 				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" data-cms-source="/index.html" data-cms-index="6" />
