--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 				<p>Unique web designs with strategic insights that generate more user engagement and higher conversions</p>
 			</div>
 			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" data-cms-source="/index.html" data-cms-index="6" />
+				<img alt="Screenshot" class="screenshot editable" src="/uploads/detroit-web-design-agency-albatech.jpg" width="794" data-cms-source="/index.html" data-cms-index="6" />
 			</div>
 		</div>
 	</section>
@@ -130,11 +130,11 @@
 	<section>
 		<div class="container flex">
 			<div class="text editable" data-cms-source="/index.html" data-cms-index="7">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2><strong>E-commerce&nbsp;</strong>with Shopify and Woo-commerce</h2>
+				<p>First impressions are crucial for any E-commerce website, exceed your online customer experience, and you&rsquo;ll drastically increase your ROI.&nbsp;</p>
 			</div>
 			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" data-cms-source="/index.html" data-cms-index="8" />
+				<img alt="Screenshot" class="screenshot editable" src="/uploads/online-shopping-landing-page-illustration.jpg" width="794" srcset="/uploads/online-shopping-landing-page-illustration.jpg 794w, /uploads/online-shopping-landing-page-illustration@2x.jpg 1588w" data-cms-source="/index.html" data-cms-index="8" />
 			</div>
 		</div>
 	</section>
